# photo_bot

./: .env  .gitignore  README.md  interaction.py  main.py  pyproject.toml  requirements.txt
API/: README.md  bot_actions.py  create_db.py  data.py  db_control.py  db_modules.py  main.py  pyproject.toml  records_db.py  seshat_manager  test_main.py
API/tests/: conftest.py  test_bot_actions.py  test_change_group_photo.py  test_db_modules.py  test_getUpdates.py  test_remove_member.py  test_sendMedia.py  test_update_Members.py  test_update_member.py
API/tests/bot_actions/: test_bot_photo.py  test_bot_poll.py
API/tests/endpoints/: test_change_group_photo.py  test_message.py  test_remove_member.py  test_update_member.py
bot/: group_manager.py  group_manger.py  pyproject.toml
musicbot/: main.py
seshat/API/: bot_actions.py
seshat/bot/: group_manger.py
telegram_seshat/: README.md  main.py  pyproject.toml
telegram_seshat/API/: api.py  bot_actions.py  data.py  main.py  test_main.py
telegram_seshat/API/data/: data.py
telegram_seshat/API/modules/: bot_actions.py
telegram_seshat/bot/: seshat_bot.py
