[tool.poetry]
name = "seshat_bot"
version = "0.1.0"
description = "This is the telegram bot that will use the seshat api to handle the telegram side of things."
authors = ["Sepehrmasihpour <sepehr.masihpour1381@gmail.com>"]
license = "Proprietary"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
python-telegram-bot = "^21.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

